# leaf

./: .clang-format  .gitignore  README.md  StyleGuide.md  package-lock.json  platformio.ini
.github/workflows/: arduino.yaml  build.yaml  ci.yaml  hygiene.yaml  platformio.yaml  release.yml  website.yml
FontCreation/: Leaf Icons.bdf  Leaf Icons_v2.bdf  Leaf_6x12.bdf  Leaf_8x14.bdf  Leaf_BattIcon_Vertical.bdf  Leaf_BattIcon_Vertical.c  Leaf_BattIcon_Vertical.fon  Leaf_n_6x12.bdf  bdf.tga  changes.txt  leaf_10x17.bdf  leaf_10x17.c  leaf_10x17.fon  leaf_21h.bdf  leaf_21h.c  leaf_21h.fon  leaf_4x12.fon  leaf_5h.bdf  leaf_5h.c  leaf_5h.fon  leaf_5h_skinny.bdf  leaf_5x12.fon  leaf_5x8.bdf  leaf_5x8.c  leaf_5x8.fon  leaf_6-7x10h_heading.fon  leaf_6x10.bdf  leaf_6x10.c  leaf_6x10.fon  leaf_6x12.c  leaf_6x12.fon  leaf_7x10.bdf  leaf_7x10.c  leaf_7x10_heading.fon  leaf_7x13.bdf  leaf_7x13.c  leaf_7x13.fon  leaf_8x14.c  leaf_8x14.fon  leaf_9x16.bdf  (+19 more)
FontCreation/Data/Language/: Finnish.lng  Fony.dklang  Japanese.lng  Russian.lng
analyses/altitude_filtering/: baro20hz_1.csv  baro50hz_1.csv  baro_accel_50hz_1.csv  quadratic_regression.py
dev/: README.md  details.md
docs/dev-references/: core-dumps.md  example.md  libraries-and-licence.md  rtos.md  variants.md
docs/dev-references/bus/: index.md
docs/dev-references/debug-memory/: index.md
docs/dev-references/fanet/: index.md
docs/dev-references/ide-setup/: index.md
docs/dev-references/testing/: test_procedure.md
docs/legal/: disclaimer.md
docs/user-guides/: getting-started.md  test-pilot-page.md  vario-user-manual.md
docs/user-guides/testpilot/: test-pilot-page.md
docs/user-guides/vario-user-manual/: index.md  index.mdx  style.css  vario-user-manual.md
src/: README.md
src/libraries/FLARM/: CMakeLists.txt  README.md  library.json  library.properties
src/libraries/FLARM/cmake/: flarmConfig.cmake.in  helpers.cmake
src/libraries/FLARM/include/flarm/: flarm2024packet.hpp  lib_crc.cpp  lib_crc.hpp  lib_crc.txt
src/libraries/FLARM/test/: CMakeLists.txt  flarm2024packet_test.cpp  flarm_tests.cpp
src/scripts/: format_all_files.ps1  format_all_files.sh  rename_firmware.py  versioning.py
src/testing/: test_procedure.md
src/variants/: README.md
src/variants/leaf_3_2_2/: platformio.ini  variant.h
src/variants/leaf_3_2_3/: platformio.ini  variant.h
src/variants/leaf_3_2_5/: platformio.ini  variant.h
src/variants/leaf_3_2_6/: platformio.ini  variant.h
src/variants/leaf_3_2_7/: platformio.ini  variant.h
src/vario/: .clang-format  .gitignore  DebugWebserver.cpp  DebugWebserver.h  ESP32_Test_RGB.ino  HardwareSerial.h  IMU.cpp  IMU.h  Leaf_I2C.cpp  Leaf_I2C.h  Leaf_SPI.cpp  Leaf_SPI.h  LinearRegression.cpp  LinearRegression.h  PageMenuAbout.cpp  PageMenuAltimeter.cpp  PageMenuAltimeter.h  PageMenuDisplay.cpp  PageMenuDisplay.h  PageMenuGPS.cpp  PageMenuGPS.h  PageMenuLog.cpp  PageMenuLog.h  PageMenuMain.cpp  PageMenuMain.h  PageMenuSystem.cpp  PageMenuSystem.h  PageMenuSystemWifi.cpp  PageMenuSystemWifi.h  PageMenuUnits.cpp  PageMenuUnits.h  PageMenuVario.cpp  PageMenuVario.h  PageNavigate.cpp  PageNavigate.h  PageQR.cpp  PageQR.h  PageThermal.cpp  PageThermal.h  PageThermalSimple.cpp  (+89 more)
src/vario/comms/: ble.cpp  ble.h  debug_webserver.cpp  fanet_neighbors.h  fanet_radio.cpp  fanet_radio.h  fanet_radio_types.h  flarm_frequencies.cpp  flarm_frequencies.h  flarm_message.cpp  flarm_message.h  flarm_radio.cpp  flarm_radio.h  flarm_zones.h  message_types.h  ota.cpp
src/vario/logbook/: igc.h  (+10 more)
utils/: requirements.txt
utils/Allen_Screen_Test/: Allen_Screen_Test.ino  display_tests.h
utils/WebDebug/: README.md  chartMouseHoverPlugin.js  index.html  main.js  style.css  webserver.py
utils/image_to_string/: image_to_string.py
utils/imu_test/: gravity_estimator.h  imu_test.ino
utils/lcd_demo/: lcd_demo.ino
utils/lora_testing/: main.cpp
vario/: README.md
vario/digital_assets/: Leaf.ai
vario/hardware/: hardware_changes.md
vario/wind_estimation/: README.md
website/: astro.config.mjs  package-lock.json  package.json
website/assets/: leaf-with-logo.xcf
wind_estimation/: estimate.py  estimation.py  example1.csv  sampling.py  sensor_data.py  vectors.py  visualization.py
wind_estimation/strategies/: absolute_fit.py  v2.py
(+175 files in other folders)
